Added Damage Cap and Super Armor

--- a/util/lang/assets/proc_jp.json
+++ b/util/lang/assets/proc_jp.json
@@ -787,5 +787,57 @@
         "tooltip" : "倍率が20の場合、ユーザーの攻撃力の20%のダメージを受けます。負の値も可能です。"
       }
     }
+  },
+  "DMGCUT" : {
+    "abbr_name" : "EX装甲",
+    "full_name" : "スーパー装甲",
+    "tooltip" : "このアビリティは、一定量以下のすべてのダメージを0にする。",
+    "format" : "(prob)%の確率で(dmg)以下のダメージを無効化する[(traitIgnore){ (_left)種類に関わらず(_right)}][(procs){ (_left)攻撃の能力を無効にする(_right)}]",
+    "class" : {
+      "prob" : {
+        "name" : "確率",
+        "tooltip" : null
+      },
+      "dmg" : {
+        "name" : "攻撃力",
+        "tooltip" : "無効化されるダメージの最小値。"
+      },
+      "traitIgnore" : {
+        "name" : "無視するタイプ",
+        "tooltip" : "これがチェックされると、この能力は敵のタイプに関係なく発動できる。ネコのユニットにのみ適用されます。"
+      },
+      "procs" : {
+        "name" : "能力を無視する",
+        "tooltip" : "これをチェックすると、無効化された攻撃による能力も無効化されます。"
+      }
+    }
+  },
+  "DMGCAP" : {
+    "abbr_name" : "被害限度額",
+    "full_name" : "被害限度額",
+    "tooltip" : "このアビリティは、一定量以上のすべてのダメージを当該量に軽減する（「ダメージを無効にする」がチェックされている場合は無効にする）。",
+    "format" : "(prob)%の確率で(dmg)以上のダメージを[(!nullify){(dmg)に}(nullify){無効化}]する[(traitIgnore){ (_left)種類に関わらず(_right)}][(nullify&procs){ (_left)攻撃の能力を無効にする(_right)}]",
+    "class" : {
+      "prob" : {
+        "name" : "確率",
+        "tooltip" : null
+      },
+      "dmg" : {
+        "name" : "攻撃力",
+        "tooltip" : "無効化されるダメージの最大値です。"
+      },
+      "traitIgnore" : {
+        "name" : "無視するタイプ",
+        "tooltip" : "これがチェックされると、この能力は敵のタイプに関係なく発動できる。ネコのユニットにのみ適用されます。"
+      },
+      "nullify" : {
+        "name" : "ダメージを無効にする",
+        "tooltip" : "これがチェックされると、攻撃によるダメージは「攻撃力」に設定されるのではなく、否定されます。"
+      },
+      "procs" : {
+        "name" : "能力を無視する",
+        "tooltip" : "これをチェックすると、無効化された攻撃による能力も無効化されます。"
+      }
+    }
   }
 }
