--- a/util/lang/assets/proc.json
+++ b/util/lang/assets/proc.json
@@ -790,5 +790,57 @@
                 "tooltip" : "Percentage of activator's damage.<br>If multi is 20, it will have 20% of activator's damage. Negative values are allowed"
             }
         }
+    },
+    "DMGCUT" : {
+        "abbr_name" : "Spr. Armor",
+        "full_name" : "Super Armor",
+        "tooltip" : "This ability reduces all damage that is below certain amount to zero.",
+        "format" : "(prob)% chance to nullify [(traitIgnore){all}] damage lower than (dmg)[(procs){ and also the attack's procs}]",
+        "class" : {
+            "prob" : {
+                "name" : "chance",
+                "tooltip" : null
+            },
+            "dmg" : {
+                "name" : "damage",
+                "tooltip" : "The maximum amount of damage to be negated."
+            },
+            "traitIgnore" : {
+                "name" : "ignore traits",
+                "tooltip" : "When this is checked, this ability can trigger regardless of the enemy's trait. Only applicable on cat units"
+            },
+            "procs" : {
+                "name" : "ignore procs",
+                "tooltip" : "When this is checked, procs from nullified attacks will also be negated."
+            }
+        }
+    },
+    "DMGCAP" : {
+        "abbr_name" : "DMG. Cap",
+        "full_name" : "Damage Cap",
+        "tooltip" : "This ability reduces all damage that is above certain amount to said amount (Or nullifies, if 'nullify damage' is checked).",
+        "format" : "(prob)% chance to [(nullify){nullify[(traitIgnore){ all}]}(!nullify){set}] damage higher than (dmg)[(!nullify){ to (dmg)}(nullify&procs){ and also the attack's procs}]",
+        "class" : {
+            "prob" : {
+                "name" : "chance",
+                "tooltip" : null
+            },
+            "dmg" : {
+                "name" : "damage",
+                "tooltip" : "The minimum amount of damage to be capped."
+            },
+            "traitIgnore" : {
+                "name" : "ignore traits",
+                "tooltip" : "When this is checked, this ability can trigger regardless of the enemy's trait. Only applicable on cat units"
+            },
+            "nullify" : {
+                "name" : "nullify damage",
+                "tooltip" : "When this is checked, damage from the attack will be negated instead of set to (dmg)"
+            },
+            "procs" : {
+                "name" : "ignore procs",
+                "tooltip" : "When this is checked, procs from nullified attacks will also be negated. Only works if 'nullify damage' is checked"
+            }
+        }
     }
 }
