Add Dire on stat display page, fixed common proc issue on dmg cut/cap, made ITF/CotC fruits have no effect when enemies attack enemies

--- a/util/lang/assets/proc_jp.json
+++ b/util/lang/assets/proc_jp.json
@@ -803,8 +803,8 @@
         "tooltip" : "無効化されるダメージの最小値。"
       },
       "traitIgnore" : {
-        "name" : "無視するタイプ",
-        "tooltip" : "これがチェックされると、この能力は敵のタイプに関係なく発動できる。ネコのユニットにのみ適用されます。"
+        "name" : "無視属性",
+        "tooltip" : "これがチェックされると、この能力は敵の属性に関係なく発動できる。ネコのユニットにのみ適用されます。"
       },
       "procs" : {
         "name" : "能力を無視する",
@@ -827,8 +827,8 @@
         "tooltip" : "無効化されるダメージの最大値です。"
       },
       "traitIgnore" : {
-        "name" : "無視するタイプ",
-        "tooltip" : "これがチェックされると、この能力は敵のタイプに関係なく発動できる。ネコのユニットにのみ適用されます。"
+        "name" : "無視属性",
+        "tooltip" : "これがチェックされると、この能力は敵の属性に関係なく発動できる。ネコのユニットにのみ適用されます。"
       },
       "nullify" : {
         "name" : "ダメージを無効にする",
