--- a/util/lang/assets/proc_jp.json
+++ b/util/lang/assets/proc_jp.json
@@ -346,6 +346,18 @@
       }
     }
   },
+  "IMUSEAL": {
+    "abbr_name": "封印無効",
+    "full_name": "封印無効/耐性",
+    "tooltip": null,
+    "format": "封印の呪い[(mult==100){無効}(mult<100&mult>0){(mult)%耐性}(mult<0){(_abs(mult))%脆弱性}]",
+    "class": {
+      "mult": {
+        "name": "割合",
+        "tooltip": null
+      }
+    }
+  },
   "IMUSUMMON": {
     "abbr_name": "召喚無効",
     "full_name": "召喚無効/耐性",
@@ -528,6 +540,18 @@
       }
     }
   },
+  "IMUMOVING": {
+    "abbr_name": "動く攻撃無効",
+    "full_name": "動く攻撃ダメージ無効/耐性",
+    "tooltip": null,
+    "format": "動く攻撃ダメージ[(mult==100){無効}(mult<100&mult>0){(mult)%耐性}(mult<0){(_abs(mult))%脆弱性}]",
+    "class": {
+      "mult": {
+        "name": "割合",
+        "tooltip": null
+      }
+    }
+  },
   "THEME": {
     "abbr_name": "BG変更",
     "full_name": "背景変更",
@@ -691,11 +715,23 @@
       }
     }
   },
+  "IMUPOI": {
+    "abbr_name": "毒無効",
+    "full_name": "毒・火傷無効/耐性",
+    "tooltip": null,
+    "format": "毒・火傷[(mult==100){無効}(mult<100&mult>0){(mult)%耐性}(mult<0){(_abs(mult))%脆弱性}]",
+    "class": {
+      "mult": {
+        "name": "軽減割合",
+        "tooltip": null
+      }
+    }
+  },
   "IMUPOIATK": {
     "abbr_name": "毒撃無効",
     "full_name": "毒撃無効/耐性",
     "tooltip": null,
-    "format": "毒撃[(mult==100){無効}(mult<100){(mult)%耐性}]",
+    "format": "毒撃[(mult==100){無効}(mult<100&mult>0){(mult)%耐性}(mult<0){(_abs(mult))%脆弱性}]",
     "class": {
       "mult": {
         "name": "軽減割合",
@@ -707,7 +743,7 @@
     "abbr_name": "烈波ダメージ無効",
     "full_name": "烈波ダメージ無効/耐性",
     "tooltip": null,
-    "format": "烈波ダメージ[(mult==100){無効}(mult<100){(mult)%耐性}]",
+    "format": "烈波ダメージ[(mult==100){無効}(mult<100&mult>0){(mult)%耐性}(mult<0){(_abs(mult))%脆弱性}]",
     "class": {
       "mult": {
         "name": "軽減割合",
