--- a/util/lang/assets/proc_kr.json
+++ b/util/lang/assets/proc_kr.json
@@ -812,7 +812,7 @@
         "abbr_name" : "Spr. Armor",
         "full_name" : "Super Armor",
         "tooltip" : "This ability reduces all damage that is below certain amount to zero.",
-        "format" : "(prob)% chance to nullify [(traitIgnore){all}] damage lower than (dmg)[(procs){ and also the attack's procs}]",
+        "format" : "(prob)% chance to nullify[(type.traitIgnore){ all}] damage lower than (dmg)[(type.procs){ and also the attack's procs}]",
         "class" : {
             "prob" : {
                 "name" : "chance",
@@ -822,41 +822,41 @@
                 "name" : "damage",
                 "tooltip" : "The maximum amount of damage to be negated."
             },
-            "traitIgnore" : {
+            "type.traitIgnore" : {
                 "name" : "ignore traits",
                 "tooltip" : "When this is checked, this ability can trigger regardless of the enemy's trait. Only applicable on cat units"
             },
-            "procs" : {
+            "type.procs" : {
                 "name" : "ignore procs",
                 "tooltip" : "When this is checked, procs from nullified attacks will also be negated."
             }
         }
     },
     "DMGCAP" : {
-        "abbr_name": "M.Shield",
-        "full_name": "Magic Shield",
-        "tooltip": "This ability reduces all damage that is above certain amount to said amount (Or nullifies, if 'nullify damage' is checked).",
-        "format": "(prob)% chance to [(nullify){nullify[(traitIgnore){ all}]}(!nullify){set}] damage higher than (dmg)[(!nullify){ to (dmg)}(nullify&procs){ and also the attack's procs}]",
-        "class": {
-            "prob": {
-                "name": "chance",
-                "tooltip": null
+        "abbr_name" : "M.Shield",
+        "full_name" : "Magic Shield",
+        "tooltip" : "This ability reduces all damage that is above certain amount to said amount (Or nullifies, if 'nullify damage' is checked).",
+        "format" : "(prob)% chance to [(type.nullify){nullify[(type.traitIgnore){ all}]}(!type.nullify){set}] damage higher than (dmg)[(!type.nullify){ to (dmg)}(type.nullify&type.procs){ and also the attack's procs}]",
+        "class" : {
+            "prob" : {
+                "name" : "chance",
+                "tooltip" : null
             },
-            "dmg": {
-                "name": "damage",
-                "tooltip": "The minimum amount of damage to be capped."
+            "dmg" : {
+                "name" : "damage",
+                "tooltip" : "The minimum amount of damage to be capped."
             },
-            "traitIgnore": {
-                "name": "ignore traits",
-                "tooltip": "When this is checked, this ability can trigger regardless of the enemy's trait. Only applicable on cat units"
+            "type.traitIgnore" : {
+                "name" : "ignore traits",
+                "tooltip" : "When this is checked, this ability can trigger regardless of the enemy's trait. Only applicable on cat units"
             },
-            "nullify": {
-                "name": "nullify damage",
-                "tooltip": "When this is checked, damage from the attack will be negated instead of set to (dmg)"
+            "type.nullify" : {
+                "name" : "nullify damage",
+                "tooltip" : "When this is checked, damage from the attack will be negated instead of set to the amount"
             },
-            "procs": {
-                "name": "ignore procs",
-                "tooltip": "When this is checked, procs from nullified attacks will also be negated."
+            "type.procs" : {
+                "name" : "ignore procs",
+                "tooltip" : "When this is checked, procs from nullified attacks will also be negated. Only works if 'nullify damage' is checked"
             }
         }
     }
